[gd_scene load_steps=13 format=3 uid="uid://blf6ggpdqo7rl"]

[ext_resource type="Script" uid="uid://be0bhx52tkk5t" path="res://scene/game/vignette/vignette.gd" id="1_4i1di"]
[ext_resource type="Shader" uid="uid://b8twogpv2hv1p" path="res://scene/game/vignette/vignette.gdshader" id="1_7ppcb"]
[ext_resource type="Texture2D" uid="uid://dmqb6dau3tugq" path="res://aaasets/bgs/ice_vig/ice_vig_top_right.png" id="3_3p4nb"]
[ext_resource type="AudioStream" uid="uid://dt23q38fc6rg3" path="res://aasounds/freeze.wav" id="3_hbg28"]
[ext_resource type="Texture2D" uid="uid://d4mqwrkhwk00v" path="res://aaasets/bgs/ice_vig/ice_vig_top_left.png" id="4_58yst"]
[ext_resource type="Texture2D" uid="uid://c7f711f8sjtdm" path="res://aaasets/bgs/ice_vig/ice_vig_down_right.png" id="5_3b5tn"]
[ext_resource type="Texture2D" uid="uid://bp1akcrs5ynsl" path="res://aaasets/bgs/ice_vig/ice_vig_down_left.png" id="6_2v4ub"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4i1di"]
shader = ExtResource("1_7ppcb")
shader_parameter/vignette_intensity = 0.3
shader_parameter/vignette_opacity = 0.30000001425
shader_parameter/vignette_rgb = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_4i1di"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/vignette_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.30000001425]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:material:shader_parameter/vignette_rgb")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hbg28"]
resource_name = "frozen"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 0.6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/vignette_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.800000038, 0.6000000285]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:material:shader_parameter/vignette_rgb")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.306198, 0.6004879, 1, 1), Color(0, 0.6, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7ppcb"]
resource_name = "hit"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.6, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/vignette_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.6000000285, 0.800000038]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:material:shader_parameter/vignette_rgb")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4i1di"]
_data = {
&"RESET": SubResource("Animation_4i1di"),
&"frozen": SubResource("Animation_hbg28"),
&"hit": SubResource("Animation_7ppcb")
}

[node name="Vignette" type="CanvasLayer"]
script = ExtResource("1_4i1di")

[node name="IceOverlayTR" type="TextureRect" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -344.0
offset_right = -301.0
offset_bottom = 39.0
grow_horizontal = 0
scale = Vector2(8, 8)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_3p4nb")

[node name="IceOverlayTL" type="TextureRect" parent="."]
visible = false
offset_right = 46.0
offset_bottom = 45.0
scale = Vector2(8, 8)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_58yst")

[node name="IceOverlayDR" type="TextureRect" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -344.0
offset_top = -376.0
offset_right = -301.0
offset_bottom = -329.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(8, 8)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_3b5tn")

[node name="IceOverlayDL" type="TextureRect" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -376.0
offset_right = 46.0
offset_bottom = -329.0
grow_vertical = 0
scale = Vector2(8, 8)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_2v4ub")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4i1di")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4i1di")
}

[node name="FreezeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hbg28")
volume_db = 20.0
